[patch] Auto-generate catalog docs from mas-devops metadata

--- a/docs/catalogs/v8-230414-amd64.md
+++ b/docs/catalogs/v8-230414-amd64.md
@@ -6,18 +6,9 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v8 (230414)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
+:::mas-catalog-details
 
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v8-230414-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:4e7a81ee11bd0667f1cadc1ea1da44865e412fb0597186cfc8baa9ceb3015592</tr></tr>
-</table>
-
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-230414-amd64.yaml`
+:::mas-catalog-install
 
 !!! warning
     This catalog is only certified for use on OpenShift Container Platform versions 4.8, 4.9, & 4.10, which have all reached end of support as of **September 10th, 2023**.  For more information about the OCP lifecycle refer to the [Red Hat OpenShift Container Platform Life Cycle Policy](https://access.redhat.com/support/policy/updates/openshift/)
@@ -26,22 +17,7 @@ Manual Installation
     This release of the catalog is no longer supported due to the shutdown of IBM User Data Services, the first operator catalog release that supports it's replacement (IBM Data Reporter Operator) is the [February 2024 update](v8-240227-amd64.md)
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v8-230414-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:4e7a81ee11bd0667f1cadc1ea1da44865e412fb0597186cfc8baa9ceb3015592
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
