--- a/docs/catalogs/v9-250109-amd64.md
+++ b/docs/catalogs/v9-250109-amd64.md
@@ -1,14 +1,7 @@
 IBM Maximo Operator Catalog v9 (250109)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-250109-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:028f32213d3f14405eda7e78aaec28411688272f3358c5a34f6ebed6cf46c4c3</tr></tr>
-</table>
+:::mas-catalog-details
 
 
 What's New
@@ -29,27 +22,10 @@ Known Issues
 - Disconnected environments with Manage Civil, Aviation and ICD should not be updated at this time due to a known bug.
 
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-250109-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-250109-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:028f32213d3f14405eda7e78aaec28411688272f3358c5a34f6ebed6cf46c4c3
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
