--- a/docs/catalogs/v9-250624-s390x.md
+++ b/docs/catalogs/v9-250624-s390x.md
@@ -1,13 +1,7 @@
 IBM Maximo Operator Catalog v9 (250624)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-250624-s390x</tr></tr>
-  <tr><td>Digest</td><td>sha256:5748e21db7f688c8d80c5ab14e394e5575997cfc2e544d77b2173159dc237aba</tr></tr>
-</table>
+:::mas-catalog-details
 
 
 What's New
@@ -23,27 +17,10 @@ What's New
 
 - **Openshift 4.18 support** Openshift Container Platform 4.18 support has been added. Refer OCP 4.18 release notes [here](https://docs.redhat.com/en/documentation/openshift_container_platform/4.18/html/release_notes/index)
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-250624-s390x.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-250624-s390x)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:5748e21db7f688c8d80c5ab14e394e5575997cfc2e544d77b2173159dc237aba
-  priority: 90
-```
+:::mas-catalog-source
 
 
 Red Hat OpenShift Container Platform Support
