--- a/docs/catalogs/v9-250925-ppc64le.md
+++ b/docs/catalogs/v9-250925-ppc64le.md
@@ -1,13 +1,7 @@
 IBM Maximo Operator Catalog v9 (250925)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-250925-ppc64le</tr></tr>
-  <tr><td>Digest</td><td>sha256:3f7809233f72bf6007e7099a1c38a3577e1ffb0197a29b891a24fef007a8dcf7</tr></tr>
-</table>
+:::mas-catalog-details
 
 
 - New **MAS 9.2 feature channels** for Core and Manage offering early access to some of the new features that will be included in the upcoming 9.2 release next year
@@ -15,27 +9,10 @@ Details
     - IBM Maximo Application Suite Core Platform v9.0 and v9.1
     - IBM Maximo Manage v9.0 and v9.1
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-250925-ppc64le.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-250925-ppc64le)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:3f7809233f72bf6007e7099a1c38a3577e1ffb0197a29b891a24fef007a8dcf7
-  priority: 90
-```
+:::mas-catalog-source
 
 
 Red Hat OpenShift Container Platform Support
