--- a/docs/catalogs/v9-251127-ppc64le.md
+++ b/docs/catalogs/v9-251127-ppc64le.md
@@ -1,13 +1,7 @@
 IBM Maximo Operator Catalog v9 (251127)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-251127-ppc64le</tr></tr>
-  <tr><td>Digest</td><td>sha256:73ab06c7642922daff44fbc1cc67fb89bc387ae96cf9d87e0c15511f8a6425c4</tr></tr>
-</table>
+:::mas-catalog-details
 
 What's New
 -------------------------------------------------------------------------------
@@ -17,27 +11,10 @@ What's New
     - IBM Maximo Application Suite Core Platform v9.0 and v9.1
     - IBM Maximo Manage v9.0 and v9.1
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-251127-ppc64le.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-251127-ppc64le)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:73ab06c7642922daff44fbc1cc67fb89bc387ae96cf9d87e0c15511f8a6425c4
-  priority: 90
-```
+:::mas-catalog-source
 
 
 Red Hat OpenShift Container Platform Support
