--- a/docs/catalogs/v8-221228-amd64.md
+++ b/docs/catalogs/v8-221228-amd64.md
@@ -6,14 +6,7 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v8 (221228)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v8-221228-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:505a135ba1af2cee548703e85b17764074b7479dbbf506b132d5871af793073f</tr></tr>
-</table>
+:::mas-catalog-details
 
 Other IBM content curated from `icr.io/cpopen/ibm-operator-catalog@sha256:9c7552673a8d90bfe1da16dd8c28288b00cf6ffd6bad6edb26042c2991f266e0`
 
@@ -27,27 +20,10 @@ Other IBM content curated from `icr.io/cpopen/ibm-operator-catalog@sha256:9c7552
     This release of the catalog is no longer supported due to the shutdown of IBM User Data Services, the first operator catalog release that supports it's replacement (IBM Data Reporter Operator) is the [February 2024 update](v8-240227-amd64.md)
 
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-221228-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v8-221228-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:505a135ba1af2cee548703e85b17764074b7479dbbf506b132d5871af793073f
-  priority: 90
-```
+:::mas-catalog-source
 
 
 OpenShift Container Platform Support
