--- a/docs/catalogs/v8-230314-amd64.md
+++ b/docs/catalogs/v8-230314-amd64.md
@@ -6,14 +6,7 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v8 (230217)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v8-230314-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:8d8304e53e67ee6a7aacddee0491e41ac5f725fb80e4e0aa34409c38a363b632</tr></tr>
-</table>
+:::mas-catalog-details
 
 Other IBM content curated from `icr.io/cpopen/ibm-operator-catalog@sha256:8521ac8527cf723041066e88997a264094d5f8eae20e9ffe30353444768cb3c0`
 
@@ -23,27 +16,10 @@ Other IBM content curated from `icr.io/cpopen/ibm-operator-catalog@sha256:8521ac
 !!! warning
     This release of the catalog is no longer supported due to the shutdown of IBM User Data Services, the first operator catalog release that supports it's replacement (IBM Data Reporter Operator) is the [February 2024 update](v8-240227-amd64.md)
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-230314-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v8-230314-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:8d8304e53e67ee6a7aacddee0491e41ac5f725fb80e4e0aa34409c38a363b632
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
