--- a/docs/catalogs/v8-230721-amd64.md
+++ b/docs/catalogs/v8-230721-amd64.md
@@ -6,14 +6,7 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v8 (230721)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v8-230721-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:200df0fe4723d2ec40433be5793ee3afe341f966f66b7acaa1fb43b412c90848</tr></tr>
-</table>
+:::mas-catalog-details
 
 !!! note
     This catalog is a republish of the [v8-230627-amd64](v8-230627-amd64.md) catalog, it introduces only one new package - IBM User Data Services v2.0.11 - to fix a critical defect related to support for a recent update of Crunchy Postgres in the Red Hat Certified Operator Catalog.  For more information refer to [ibm-mas/ansible-devops#916](https://github.com/ibm-mas/ansible-devops/issues/916).
@@ -24,27 +17,10 @@ Details
     This release of the catalog is no longer supported due to the shutdown of IBM User Data Services, the first operator catalog release that supports it's replacement (IBM Data Reporter Operator) is the [February 2024 update](v8-240227-amd64.md)
 
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-230721-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v8-230721-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:200df0fe4723d2ec40433be5793ee3afe341f966f66b7acaa1fb43b412c90848
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
