--- a/docs/catalogs/v8-231004-amd64.md
+++ b/docs/catalogs/v8-231004-amd64.md
@@ -37,27 +37,10 @@ Details
 </table>
 
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-231004-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v8-231004-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:32b28d56327215dcab58664f10987b3e961c0ee9630744b9f66b710e9d879dca
-  priority: 90
-```
+:::mas-catalog-source
 
 
 Red Hat OpenShift Container Platform Support
