--- a/docs/catalogs/v8-240130-amd64.md
+++ b/docs/catalogs/v8-240130-amd64.md
@@ -6,14 +6,7 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v8 (240130)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v8-240130-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:7944a630ce47776338238717cb04ff98e1faf90087fd339708a0785c683326ca</tr></tr>
-</table>
+:::mas-catalog-details
 
 !!! warning
     This release of the catalog is no longer supported due to the shutdown of IBM User Data Services, the first operator catalog release that supports it's replacement (IBM Data Reporter Operator) is the [February 2024 update](v8-240227-amd64.md)
@@ -42,27 +35,10 @@ What's New
     No action is required to register Crunchy Postgres.  In the February 2024 update this dependency will be eliminated entirely by the introduction of **IBM Data Reporter Operator** (DRO) as a replacement for UDS. We recommend customers pick up this update as soon as it becomes available rather than registering for Postgres updates.
 
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-240130-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v8-240130-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:7944a630ce47776338238717cb04ff98e1faf90087fd339708a0785c683326ca
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
