--- a/docs/catalogs/v8-240227-amd64.md
+++ b/docs/catalogs/v8-240227-amd64.md
@@ -6,14 +6,7 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v8 (240227)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v8-240227-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:8a2f2226b4aa47d42ccb564083d2a6e365fc4b116fb9a82ea83e269383a1efa1</tr></tr>
-</table>
+:::mas-catalog-details
 
 
 What's New
@@ -38,27 +31,10 @@ What's New
     - [DT260685](https://www.ibm.com/mysupport/aCI3p0000008e2y) - The API v2/bulk/users/manageuseridmigrate fails with status 413
 
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-240227-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v8-240227-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:8a2f2226b4aa47d42ccb564083d2a6e365fc4b116fb9a82ea83e269383a1efa1
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
