--- a/docs/catalogs/v8-240326-amd64.md
+++ b/docs/catalogs/v8-240326-amd64.md
@@ -6,14 +6,7 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v8 (240326)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v8-240326-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:9c891bb6fa8496e1ef514d29b253bf5b1e817fe95963f6e536170688aa95f1d2</tr></tr>
-</table>
+:::mas-catalog-details
 
 !!! important
     ibm-mas 8.11.8 in this catalog has a known issue with high severity [DT378321](https://www.ibm.com/mysupport/aCIKe0000008OiX). We are releasing `v8-240405-amd64` catalog with ibm-mas 8.11.9 to fix this issue. Please use MAS CLI versions v7.19.0 or newer to install the newer MAS 8.11.x. We advice to skip ibm-mas 8.11.8 in this catalog and use ibm-mas 8.11.9.
@@ -33,27 +26,10 @@ What's New
     - [DT364099](https://www.ibm.com/mysupport/aCIKe0000004CAG) - Change the permission for the API that assigns a user to a workspace
 
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-240326-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v8-240326-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:9c891bb6fa8496e1ef514d29b253bf5b1e817fe95963f6e536170688aa95f1d2
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
