--- a/docs/catalogs/v8-240405-amd64.md
+++ b/docs/catalogs/v8-240405-amd64.md
@@ -6,14 +6,7 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v8 (240405)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v8-240405-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:8f03470e84cad81cd5e7aaaf4bce3a08b6575d48b2d27de07c25872f73ecc59c</tr></tr>
-</table>
+:::mas-catalog-details
 
 !!! important
     This update resolves [DT378321](https://www.ibm.com/mysupport/aCIKe0000008OiX), an edge condition impacting LDAP sync with Extensions introduced in the March update. We advise customers to skip the [March catalog update](https://ibm-mas.github.io/cli/catalogs/v8-240326-amd64/) and go direct to this one.
@@ -25,27 +18,10 @@ What's New
 - [DT378321](https://www.ibm.com/mysupport/aCIKe0000008OiX) - Default Extension field missing from 8.11.8 LDAP sync
 
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-240405-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v8-240405-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:8f03470e84cad81cd5e7aaaf4bce3a08b6575d48b2d27de07c25872f73ecc59c
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
