--- a/docs/catalogs/v8-240430-amd64.md
+++ b/docs/catalogs/v8-240430-amd64.md
@@ -6,14 +6,7 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v8 (240430)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v8-240430-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:ce8e623505fbfca7fa207b341a442448b99ff44eeb527df5f3a4c687a47e47e4</tr></tr>
-</table>
+:::mas-catalog-details
 
 !!! important
     MAS 8.10.12 and Manage 8.6.12 are not included in the catalog as they are reserved for internal use only.
@@ -34,27 +27,10 @@ What's New
     - Security updates in base image and python modules
     - [DT366044](https://www.ibm.com/mysupport/aCIKe000000GmvB) - LDAP sync is allowing adding users with empty information
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-240430-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v8-240430-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:ce8e623505fbfca7fa207b341a442448b99ff44eeb527df5f3a4c687a47e47e4
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
