--- a/docs/catalogs/v8-240528-amd64.md
+++ b/docs/catalogs/v8-240528-amd64.md
@@ -6,14 +6,7 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v8 (240528)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v8-240528-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:5ca51934b3aec978e261e6dc9704fd3d46a308010bd6c86252788d69aac3fa9f</tr></tr>
-</table>
+:::mas-catalog-details
 
 !!! important
     IoT 8.8.8 and 8.7.12 are not included in the catalog as they are reserved for internal use only.
@@ -33,27 +26,10 @@ What's New
     - IBM amlen 1.1.1
     - Security updates in base image and python modules
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v8-240528-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v8-240528-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:5ca51934b3aec978e261e6dc9704fd3d46a308010bd6c86252788d69aac3fa9f
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
