--- a/docs/catalogs/v9-240625-amd64.md
+++ b/docs/catalogs/v9-240625-amd64.md
@@ -6,14 +6,7 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v9 (240625)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-240625-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:e74f646327e728aa523199e9dfb2e95efb67385755c3ac9f0763ab6563e63843</tr></tr>
-</table>
+:::mas-catalog-details
 
 !!! important
     **Maximo Assist**
@@ -49,27 +42,10 @@ What's New
     - IBM Truststore Manager v1.5
 
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-240625-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-240625-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:e74f646327e728aa523199e9dfb2e95efb67385755c3ac9f0763ab6563e63843
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
