--- a/docs/catalogs/v9-241107-amd64.md
+++ b/docs/catalogs/v9-241107-amd64.md
@@ -1,15 +1,7 @@
 IBM Maximo Operator Catalog v9 (241107)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-241107-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:2d470131ab6948d5262553547fafa1b472fa25690be5abba8719ad7493cd8911</tr></tr> 
-  <!-- ^^^^^ tbc -->
-</table>
+:::mas-catalog-details
 
 !!! important
     **Maximo Assist**
@@ -34,27 +26,10 @@ What's New
     - IBM SLS v3.0
 
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-241107-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-241107-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:2d470131ab6948d5262553547fafa1b472fa25690be5abba8719ad7493cd8911
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
