--- a/docs/catalogs/v9-241107-s390x.md
+++ b/docs/catalogs/v9-241107-s390x.md
@@ -6,13 +6,7 @@ nav_title: Operator Catalog
 IBM Maximo Operator Catalog v9 (241107)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-241107-s390x</tr></tr>
-  <tr><td>Digest</td><td>sha256:30fa9a90569273e7f323b7b673385f3843f06df332c2ed061aaa2ff7aa189a71</tr></tr> 
-</table>
+:::mas-catalog-details
 
 
 What's New
@@ -22,26 +16,9 @@ What's New
     - IBM Maximo Application Suite Core Platform v9.0
     - IBM Maximo Manage v9.0
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-241107-s390x.yaml`
+:::mas-catalog-install
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-241107-s390x)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:30fa9a90569273e7f323b7b673385f3843f06df332c2ed061aaa2ff7aa189a71
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
