--- a/docs/catalogs/v9-250403-amd64.md
+++ b/docs/catalogs/v9-250403-amd64.md
@@ -1,14 +1,7 @@
 IBM Maximo Operator Catalog v9 (250403)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-250403-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:e225b03ff1054e2b1bcef0fcc883cc8f53c7b29f472ca7d3c08cb6a6084b2ab4</tr></tr>
-</table>
+:::mas-catalog-details
 
 
 What's New
@@ -30,27 +23,10 @@ Known Issues
 - If your Maximo usage is significantly reliant on Maximo Mobile / Maximo's Role Based Applications, it is advised to bypass this Patch 9.0.11 release and await the subsequent patch release for 9.0.12 . Due to the recently encountered issue, this particular patch may not function as intended for Maximo Mobile/Role Based Applications' work order Change Status feature if you have industry solutions layered on top of the core Manage. However, if you still need to apply this patch, we can offer a Limited Availability Fix (LA Fix) in the event you encounter this issue. Please note that you will need to submit a LA Fix request for this
 - You can click the link below for further details. <a href="https://www.ibm.com/support/pages/bmxaa9238e-when-changing-status-wo-after-applying-managemobile-9011"> www.ibm.com/support/pages/bmxaa9238e-when-changing-status-wo-after-applying-managemobile-9011 </a>
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-250403-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-250403-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:e225b03ff1054e2b1bcef0fcc883cc8f53c7b29f472ca7d3c08cb6a6084b2ab4
-  priority: 90
-```
+:::mas-catalog-source
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
