--- a/docs/catalogs/v9-250828-amd64.md
+++ b/docs/catalogs/v9-250828-amd64.md
@@ -1,14 +1,7 @@
 IBM Maximo Operator Catalog v9 (250828)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-250828-amd64</tr></tr>
-  <tr><td>Digest</td><td>sha256:0a24540abbb65155d3dfde68fe57a777aae785127ebb34a272614a06710caaa2</tr></tr>
-</table>
+:::mas-catalog-details
 
 
 What's New
@@ -39,27 +32,10 @@ Known Issues
   Please use the 2nd Sep catalog `v9-250902` with AIService `9.1.6`.
 
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-250828-amd64.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-250828-amd64)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:0a24540abbb65155d3dfde68fe57a777aae785127ebb34a272614a06710caaa2
-  priority: 90
-```
+:::mas-catalog-source
 
 
 Red Hat OpenShift Container Platform Support
