--- a/docs/catalogs/v9-250902-ppc64le.md
+++ b/docs/catalogs/v9-250902-ppc64le.md
@@ -1,40 +1,17 @@
 IBM Maximo Operator Catalog v9 (250902)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-250902-ppc64le</tr></tr>
-  <tr><td>Digest</td><td>sha256:df9bdaa918550e2279c9269c54f2700ea98d9c537b1b57468bd16041f363fafe</tr></tr>
-</table>
+:::mas-catalog-details
 
 
 What's New
 -------------------------------------------------------------------------------
     - NA
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-250902-ppc64le.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-250902-ppc64le)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:df9bdaa918550e2279c9269c54f2700ea98d9c537b1b57468bd16041f363fafe
-  priority: 90
-```
+:::mas-catalog-source
 
 
 Red Hat OpenShift Container Platform Support
