--- a/docs/catalogs/v9-250902-s390x.md
+++ b/docs/catalogs/v9-250902-s390x.md
@@ -1,40 +1,17 @@
 IBM Maximo Operator Catalog v9 (250902)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-250902-s390x</tr></tr>
-  <tr><td>Digest</td><td>sha256:142080295b0bfc53e738c94b1b49cb7f6ba1668ab7a010cf214f32e20f396664</tr></tr>
-</table>
+:::mas-catalog-details
 
 
 What's New
 -------------------------------------------------------------------------------
     - NA
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-250902-s390x.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-250902-s390x)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:142080295b0bfc53e738c94b1b49cb7f6ba1668ab7a010cf214f32e20f396664
-  priority: 90
-```
+:::mas-catalog-source
 
 
 Red Hat OpenShift Container Platform Support
