--- a/docs/catalogs/v9-251127-s390x.md
+++ b/docs/catalogs/v9-251127-s390x.md
@@ -1,13 +1,7 @@
 IBM Maximo Operator Catalog v9 (251127)
 ===============================================================================
 
-Details
--------------------------------------------------------------------------------
-<table>
-  <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
-  <tr><td>Tag</td><td>v9-251127-s390x</tr></tr>
-  <tr><td>Digest</td><td>sha256:8d2995b2b9589488c1b36035003febf5a5bd025fe56529593b8552fe8ee7135c</tr></tr>
-</table>
+:::mas-catalog-details
 
 
 What's New
@@ -18,26 +12,10 @@ What's New
     - IBM Maximo Application Suite Core Platform v9.0 and v9.1
     - IBM Maximo Manage v9.0 and v9.1
 
-Manual Installation
--------------------------------------------------------------------------------
-`oc apply -f https://raw.githubusercontent.com/ibm-mas/cli/master/catalogs/v9-251127-s390x.yaml`
+:::mas-catalog-install
 
 
-Source
--------------------------------------------------------------------------------
-```yaml
-apiVersion: operators.coreos.com/v1alpha1
-kind: CatalogSource
-metadata:
-  name: ibm-operator-catalog
-  namespace: openshift-marketplace
-spec:
-  displayName: IBM Maximo Operators (v9-251127-s390x)
-  publisher: IBM
-  description: Static Catalog Source for IBM Maximo Application Suite
-  sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:8d2995b2b9589488c1b36035003febf5a5bd025fe56529593b8552fe8ee7135c
-```
+:::mas-catalog-source
 
 
 Red Hat OpenShift Container Platform Support
