Directive for OCP support

--- a/docs/catalogs/v9-251127-amd64.md
+++ b/docs/catalogs/v9-251127-amd64.md
@@ -42,38 +42,7 @@ For more information about the OCP lifecycle refer to the [Red Hat OpenShift Con
 
 IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Container Platform subscription as part of their purchase. This includes 18 months of maintenance support for each OpenShift minor release.  A further 6 months support is available to purchase as an Extended Update Support (EUS) Add-on to x86-64 versions of Red Hat OpenShift Kubernetes Engine, Red Hat OpenShift Container Platform, and Red Hat OpenShift Platform Plus Standard subscriptions.
 
-<table class="compatabilityMatrix">
-  <tr>
-    <th>OCP</th><td rowspan="6" class="spacer"></td>
-    <th>General Availability</th>
-    <th>Standard Support</th>
-    <th>Extended Support</th>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.19</td>
-    <td>June 17, 2025</td>
-    <td>December 17, 2026</td>
-    <td> N/A </td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.18</td>
-    <td>February 25, 2025</td>
-    <td>GA of 4.19 + 3 Months</td>
-    <td>August 25, 2026</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.17</td>
-    <td>October 1, 2024</td>
-    <td>May 25, 2025</td>
-    <td>April 1, 2026</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.16</td>
-    <td>June 27, 2024</td>
-    <td>December 27, 2025</td>
-    <td>June 27, 2027</td>
-  </tr>
-</table>
+:::mas-catalog-ocp-compatibility-matrix
 
 
 ### Certified Operators
