--- a/docs/catalogs/v9-250902-s390x.md
+++ b/docs/catalogs/v9-250902-s390x.md
@@ -4,15 +4,13 @@ IBM Maximo Operator Catalog v9 (250902)
 :::mas-catalog-details
 
 
-What's New
--------------------------------------------------------------------------------
-    - NA
 
+:::mas-catalog-whats-new
+
+:::mas-catalog-known-issues
 :::mas-catalog-install
 
-
 :::mas-catalog-source
-
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
@@ -22,12 +20,10 @@ IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Cont
 
 :::mas-catalog-ocp-compatibility-matrix
 
-
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **openshift-pipelines-operator-rh** required by the MAS CLI
-
 
 ### IBM Maximo Application Suite
 | Package        | Default Channel   | Channel       | Latest Version                              |
