--- a/docs/catalogs/v9-250925-ppc64le.md
+++ b/docs/catalogs/v9-250925-ppc64le.md
@@ -4,6 +4,8 @@ IBM Maximo Operator Catalog v9 (250925)
 :::mas-catalog-details
 
 
+
+:::mas-catalog-known-issues
 - New **MAS 9.2 feature channels** for Core and Manage offering early access to some of the new features that will be included in the upcoming 9.2 release next year
 - **Security updates and bug fixes**
     - IBM Maximo Application Suite Core Platform v9.0 and v9.1
