--- a/docs/catalogs/v9-251010-ppc64le.md
+++ b/docs/catalogs/v9-251010-ppc64le.md
@@ -4,6 +4,8 @@ IBM Maximo Operator Catalog v9 (251010)
 :::mas-catalog-details
 
 
+
+:::mas-catalog-known-issues
 - **Security updates and bug fixes**
     - IBM Maximo Manage v9.1
 
