--- a/docs/catalogs/v9-251224-s390x.md
+++ b/docs/catalogs/v9-251224-s390x.md
@@ -4,19 +4,13 @@ IBM Maximo Operator Catalog v9 (251224)
 :::mas-catalog-details
 
 
-What's New
--------------------------------------------------------------------------------
 
-- **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v9.0 and v9.1
-    - IBM Maximo Manage v9.0 and v9.1
-    - IBM Suite License Service v3.12
+:::mas-catalog-whats-new
 
+:::mas-catalog-known-issues
 :::mas-catalog-install
 
-
 :::mas-catalog-source
-
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
@@ -26,12 +20,10 @@ IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Cont
 
 :::mas-catalog-ocp-compatibility-matrix
 
-
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **openshift-pipelines-operator-rh** required by the MAS CLI
-
 
 ### IBM Maximo Application Suite
 | Package        | Default Channel   | Channel       | Latest Version                                                            |
