--- a/docs/catalogs/v9-250206-amd64.md
+++ b/docs/catalogs/v9-250206-amd64.md
@@ -4,26 +4,10 @@ IBM Maximo Operator Catalog v9 (250206)
 :::mas-catalog-details
 
 
-What's New
--------------------------------------------------------------------------------
-- **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v8.10, v8.11, v9.0, v9.1
-    - IBM Maximo IoT v8.7, v8.8 and v9.0
-    - IBM Maximo Manage v8.7, v8.6, v9.0 and v9.1
-    - IBM Maximo Monitor v8.11, v8.10 and v9.0
-    - IBM Maximo Optimizer v8.5, v8.4, v9.0 and v9.1
-    - IBM Data Dictionary v1.1
-    - IBM SLS v3.0
-    - IBM Maximo Visual Inspection v8.9, v9.0 and v9.1
+:::mas-catalog-whats-new
 
-
-Known Issues
--------------------------------------------------------------------------------
-- Customers using Maximo Assist v8.7 or v8.8 should not update and must instead contact IBM Support for guidance regarding the removal of IBM Watson Discovery and upgrading to Maximo Assist v9.0
-
-
+:::mas-catalog-known-issues
 :::mas-catalog-install
-
 
 :::mas-catalog-source
 
@@ -35,13 +19,11 @@ IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Cont
 
 :::mas-catalog-ocp-compatibility-matrix
 
-
 ### Certified Operators
 The following packages from the `registry.redhat.io/redhat/certified-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **gpu-operator-certified** required by `ibm.mas_devops.nvidia_gpu` role
 - **kubeturbo-certified** required by `ibm.mas_devops.kubeturbo` role
-
 
 ### Community Operators
 The following packages from the `registry.redhat.io/redhat/community-operator-index` catalog are used in the Maximo Application Suite install:
@@ -49,7 +31,6 @@ The following packages from the `registry.redhat.io/redhat/community-operator-in
 - **grafana-operator** required by `ibm.mas_devops.grafana` role
 - **opentelemetry-operator** required by `ibm.mas_devops.opentelemetry` role
 - **strimzi-kafka-operator** required by `ibm.mas_devops.kafka` role (if using Strimzi as Kakfa provider)
-
 
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
@@ -61,13 +42,11 @@ The following packages from the `registry.redhat.io/redhat/redhat-operator-index
 - **local-storage-operator**  required by `ibm.mas_devops.ocs` role
 - **odf-operator**  required by `ibm.mas_devops.ocs` role
 
-
 IBM Cloud Pak for Data Compatibility
 -------------------------------------------------------------------------------
 This catalog is certified compatible with **IBM Cloud Pak for Data v5.0.0**.
 
 For more information on Cloud Pak for Data's support policy review this [IBM Cloud Pak for Data Software Support Lifecycle Addendum](https://www.ibm.com/support/pages/node/6593147).
-
 
 MongoDB Compatibility
 -------------------------------------------------------------------------------
@@ -79,7 +58,6 @@ By default an in-cluster MongoDb (CE) instance will be created when you install 
 - [MongoDB Atlas](https://www.mongodb.com/products/platform/atlas-database)
 
 [Amazon DocumentDB](https://aws.amazon.com/documentdb/) provides [MongoDb compatability](https://docs.aws.amazon.com/documentdb/latest/developerguide/compatibility.html) and may be used as an alternative to MongoDb.  This catalog is certified compatible with **DocumentDb Engine Version v5.0.0**.
-
 
 Package Manifest
 -------------------------------------------------------------------------------
