--- a/docs/catalogs/v9-250306-s390x.md
+++ b/docs/catalogs/v9-250306-s390x.md
@@ -9,19 +9,13 @@ IBM Maximo Operator Catalog v9 (250306)
 :::mas-catalog-details
 
 
-What's New
--------------------------------------------------------------------------------
-- **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v9.0 & v9.1
-    - IBM Maximo Manage v9.0 & v9.1
-    - IBM SLS v3.0
 
+:::mas-catalog-whats-new
 
+:::mas-catalog-known-issues
 :::mas-catalog-install
 
-
 :::mas-catalog-source
-
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
@@ -31,13 +25,11 @@ IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Cont
 
 :::mas-catalog-ocp-compatibility-matrix
 
-
 ### Certified Operators
 The following packages from the `registry.redhat.io/redhat/certified-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **gpu-operator-certified** required by `ibm.mas_devops.nvidia_gpu` role
 - **kubeturbo-certified** required by `ibm.mas_devops.kubeturbo` role
-
 
 ### Community Operators
 The following packages from the `registry.redhat.io/redhat/community-operator-index` catalog are used in the Maximo Application Suite install:
@@ -45,7 +37,6 @@ The following packages from the `registry.redhat.io/redhat/community-operator-in
 - **grafana-operator** required by `ibm.mas_devops.grafana` role
 - **opentelemetry-operator** required by `ibm.mas_devops.opentelemetry` role
 - **strimzi-kafka-operator** required by `ibm.mas_devops.kafka` role (if using Strimzi as Kakfa provider)
-
 
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
