--- a/docs/catalogs/v9-250828-amd64.md
+++ b/docs/catalogs/v9-250828-amd64.md
@@ -4,39 +4,16 @@ IBM Maximo Operator Catalog v9 (250828)
 :::mas-catalog-details
 
 
-What's New
--------------------------------------------------------------------------------
-- **New Release**
-    - IBM Maximo AI Service v9.1
-- **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v8.10, v8.11, v9.0 and v9.1
-    - IBM Maximo IoT v8.7, v8.8, v9.0 and v9.1
-    - IBM Maximo Manage v8.6, v8.7, v9.0 and v9.1
-    - IBM Maximo Monitor v8.10, v8.11, v9.0 and v9.1
-    - IBM Maximo Optimizer v8.4, v8.5, v9.0 and v9.1
-    - IBM Maximo Assist v9.1 and v9.0
-    - IBM Maximo Predict v8.9, v8.8, v9.0 and v9.1
-    - IBM Maximo Visual Inspection  v8.9, v9.0 and v9.1
-    - IBM Maximo Real Estate and Facilities v9.1
-    - IBM Suite License Service v3.12
+:::mas-catalog-whats-new
+
+:::mas-catalog-known-issues
 
 !!! important
     MAS 8.10 and 8.11 standard support and software updates end on 30th April 2026, to ensure you are able to continue to receive monthly security updates and bug fixes we advise all customers to begin making upgrade plans for MAS 9.0 if you have not already done so.
 
-
-Known Issues
--------------------------------------------------------------------------------
-- Customers using **Maximo Assist v8.7 or v8.8** should not update and must instead contact IBM Support for guidance regarding the removal of IBM Watson Discovery and upgrading to Maximo Assist v9.0
-- Customers running **Maximo Manage v8.7** with the Civil application in a disconnected environment are advised to skip this update due to a packaging error which will result in a failure to pull the `extension-civil` container image
-- Customers are advised not to use the catalog `v9-250828` for AIService due to an issue with AIService `9.1.5`.
-  Please use the 2nd Sep catalog `v9-250902` with AIService `9.1.6`.
-
-
 :::mas-catalog-install
 
-
 :::mas-catalog-source
-
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
@@ -46,13 +23,11 @@ IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Cont
 
 :::mas-catalog-ocp-compatibility-matrix
 
-
 ### Certified Operators
 The following packages from the `registry.redhat.io/redhat/certified-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **gpu-operator-certified** required by `ibm.mas_devops.nvidia_gpu` role
 - **kubeturbo-certified** required by `ibm.mas_devops.kubeturbo` role
-
 
 ### Community Operators
 The following packages from the `registry.redhat.io/redhat/community-operator-index` catalog are used in the Maximo Application Suite install:
@@ -60,7 +35,6 @@ The following packages from the `registry.redhat.io/redhat/community-operator-in
 - **grafana-operator** required by `ibm.mas_devops.grafana` role
 - **opentelemetry-operator** required by `ibm.mas_devops.opentelemetry` role
 - **strimzi-kafka-operator** required by `ibm.mas_devops.kafka` role (if using Strimzi as Kakfa provider)
-
 
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
@@ -72,13 +46,11 @@ The following packages from the `registry.redhat.io/redhat/redhat-operator-index
 - **local-storage-operator**  required by `ibm.mas_devops.ocs` role
 - **odf-operator**  required by `ibm.mas_devops.ocs` role
 
-
 IBM Cloud Pak for Data Compatibility
 -------------------------------------------------------------------------------
 This catalog is certified compatible with **IBM Cloud Pak for Data v5.0.0**.
 
 For more information on Cloud Pak for Data's support policy review this [IBM Cloud Pak for Data Software Support Lifecycle Addendum](https://www.ibm.com/support/pages/node/6593147).
-
 
 MongoDB Compatibility
 -------------------------------------------------------------------------------
@@ -90,7 +62,6 @@ By default an in-cluster MongoDb (CE) instance will be created when you install 
 - [MongoDB Atlas](https://www.mongodb.com/products/platform/atlas-database)
 
 [Amazon DocumentDB](https://aws.amazon.com/documentdb/) provides [MongoDb compatability](https://docs.aws.amazon.com/documentdb/latest/developerguide/compatibility.html) and may be used as an alternative to MongoDb.  This catalog is certified compatible with **DocumentDb Engine Version v5.0.0**.
-
 
 ### IBM Maximo Application Suite
 | Package                  | Default Channel   | Channel       | Latest Version                                        |
