--- a/docs/catalogs/v9-251010-amd64.md
+++ b/docs/catalogs/v9-251010-amd64.md
@@ -4,46 +4,32 @@ IBM Maximo Operator Catalog v9 (251010)
 :::mas-catalog-details
 
 
-What's New
--------------------------------------------------------------------------------
+:::mas-catalog-whats-new
 
-- **Security updates and bug fixes**
-    - IBM Maximo Manage v9.1
-    - IBM Maximo Visual Inspection v9.1
+:::mas-catalog-known-issues
 
 !!! important
     MAS 8.10 and 8.11 standard support and software updates end on 30th April 2026, to ensure you are able to continue to receive monthly security updates and bug fixes we advise all customers to begin making upgrade plans for MAS 9.0 if you have not already done so.
 
-
-Known Issues
--------------------------------------------------------------------------------
-- Customers using **Maximo Assist v8.7 or v8.8** should not update and must instead contact IBM Support for guidance regarding the removal of IBM Watson Discovery and upgrading to Maximo Assist v9.0
-- If you have the Workday Connector installed and are upgrading from Manage 8.7.24 Multi-IS to Manage 9.0.17 (Online/Offline mode), it is advised to bypass this Patch 9.0.17 release due to a recently encountered error on build and await the subsequent patch release for 9.0.18. If you need to apply this patch, we can offer a Limited Availability Fix (LA Fix) in the event you encounter this issue. Please note that you will need to submit a LA Fix request for this.
-
 :::mas-catalog-install
 
-
 :::mas-catalog-source
-
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
 ### Product Support
 IBM Maximo Application Suite customers receive a Red Hat OpenShift Container Platform subscription as part of their purchase. The Red Hat Extended Update Support Add-on Term 1 offering is included with the OCP subscription that comes with a MAS license. For more details on the OCP support lifecycle see: [https://access.redhat.com/support/policy/updates/openshift](https://access.redhat.com/support/policy/updates/openshift)
 
-
 ### Certified Operators
 The following packages from the `registry.redhat.io/redhat/certified-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **gpu-operator-certified** required by `ibm.mas_devops.nvidia_gpu` role
-
 
 ### Community Operators
 The following packages from the `registry.redhat.io/redhat/community-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **grafana-operator** required by `ibm.mas_devops.grafana` role
 - **strimzi-kafka-operator** required by `ibm.mas_devops.kafka` role (if using Strimzi as Kakfa provider)
-
 
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
@@ -52,13 +38,11 @@ The following packages from the `registry.redhat.io/redhat/redhat-operator-index
 - **openshift-pipelines-operator-rh** required by the MAS CLI
 - **nfd** required by `ibm.mas_devops.nvidia_gpu` role
 
-
 IBM Cloud Pak for Data Compatibility
 -------------------------------------------------------------------------------
 This catalog is certified compatible with **IBM Cloud Pak for Data v5.0.0**.
 
 For more information on Cloud Pak for Data's support policy review this [IBM Cloud Pak for Data Software Support Lifecycle Addendum](https://www.ibm.com/support/pages/node/6593147).
-
 
 MongoDB Compatibility
 -------------------------------------------------------------------------------
@@ -70,7 +54,6 @@ By default an in-cluster MongoDb (CE) instance will be created when you install 
 - [MongoDB Atlas](https://www.mongodb.com/products/platform/atlas-database)
 
 [Amazon DocumentDB](https://aws.amazon.com/documentdb/) provides [MongoDb compatability](https://docs.aws.amazon.com/documentdb/latest/developerguide/compatibility.html) and may be used as an alternative to MongoDb.  This catalog is certified compatible with **DocumentDb Engine Version v5.0.0**.
-
 
 ### IBM Maximo Application Suite
 | Package                  | Default Channel   | Channel       | Latest Version                                                               |
