--- a/docs/catalogs/v9-251127-amd64.md
+++ b/docs/catalogs/v9-251127-amd64.md
@@ -4,37 +4,16 @@ IBM Maximo Operator Catalog v9 (251127)
 :::mas-catalog-details
 
 
-What's New
--------------------------------------------------------------------------------
+:::mas-catalog-whats-new
 
-- MongoDb v8 support Running mas update will automatically upgrade existing MongoDbCommunity instances to MongoDb version 8. This upgrade is compatible with all MAS versions included in this catalog.
-- End of support for Openshift Container Platform 4.14 and 4.15, which are both now out of support (Since May 1 2025 and August 27 2025 respectively).
-- **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v8.10, v8.11, v9.0 and v9.1
-    - IBM Maximo Manage v8.6, v8.7, v9.0 and v9.1
-    - IBM Maximo IoT v8.7, v8.8, v9.0 and v9.1
-    - IBM Maximo Monitor v8.10, v8.11, v9.0 and v9.1
-    - IBM Maximo Optimizer v9.1
-    - IBM Maximo Assist v9.1 and v9.0
-    - IBM Maximo Visual Inspection v8.9, v9.0 and v9.1
-    - IBM Maximo Real Estate and Facilities v9.1
-    - IBM Maximo AI Service v9.1
+:::mas-catalog-known-issues
 
 !!! important
     MAS 8.10 and 8.11 standard support and software updates end on 30th April 2026, to ensure you are able to continue to receive monthly security updates and bug fixes we advise all customers to begin making upgrade plans for MAS 9.0 if you have not already done so.
 
-
-Known Issues
--------------------------------------------------------------------------------
-- Customers using **Maximo Assist v8.7 or v8.8** should not update and must instead contact IBM Support for guidance regarding the removal of IBM Watson Discovery and upgrading to Maximo Assist v9.0
-- If you have the Workday Connector installed and are upgrading from Manage 8.7.24 Multi-IS to Manage 9.0.17 (Online/Offline mode), it is advised to bypass this Patch 9.0.17 release due to a recently encountered error on build and await the subsequent patch release for 9.0.18. If you need to apply this patch, we can offer a Limited Availability Fix (LA Fix) in the event you encounter this issue. Please note that you will need to submit a LA Fix request for this.
-- Customers using FIPS should not upgrade their MREF to 9.1.5, since it has problems during initialization.
-
 :::mas-catalog-install
 
-
 :::mas-catalog-source
-
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
@@ -44,19 +23,16 @@ IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Cont
 
 :::mas-catalog-ocp-compatibility-matrix
 
-
 ### Certified Operators
 The following packages from the `registry.redhat.io/redhat/certified-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **gpu-operator-certified** required by `ibm.mas_devops.nvidia_gpu` role
-
 
 ### Community Operators
 The following packages from the `registry.redhat.io/redhat/community-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **grafana-operator** required by `ibm.mas_devops.grafana` role
 - **strimzi-kafka-operator** required by `ibm.mas_devops.kafka` role (if using Strimzi as Kakfa provider)
-
 
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
@@ -65,13 +41,11 @@ The following packages from the `registry.redhat.io/redhat/redhat-operator-index
 - **openshift-pipelines-operator-rh** required by the MAS CLI
 - **nfd** required by `ibm.mas_devops.nvidia_gpu` role
 
-
 IBM Cloud Pak for Data Compatibility
 -------------------------------------------------------------------------------
 This catalog is certified compatible with **IBM Cloud Pak for Data v5.0.0**.
 
 For more information on Cloud Pak for Data's support policy review this [IBM Cloud Pak for Data Software Support Lifecycle Addendum](https://www.ibm.com/support/pages/node/6593147).
-
 
 MongoDB Compatibility
 -------------------------------------------------------------------------------
@@ -83,7 +57,6 @@ By default an in-cluster MongoDb (CE) instance will be created when you install 
 - [MongoDB Atlas](https://www.mongodb.com/products/platform/atlas-database)
 
 [Amazon DocumentDB](https://aws.amazon.com/documentdb/) provides [MongoDb compatability](https://docs.aws.amazon.com/documentdb/latest/developerguide/compatibility.html) and may be used as an alternative to MongoDb.  This catalog is certified compatible with **DocumentDb Engine Version v5.0.0**.
-
 
 ### IBM Maximo Application Suite
 | Package                  | Default Channel   | Channel       | Latest Version                                                               |
