--- a/docs/catalogs/v9-251127-ppc64le.md
+++ b/docs/catalogs/v9-251127-ppc64le.md
@@ -3,19 +3,14 @@ IBM Maximo Operator Catalog v9 (251127)
 
 :::mas-catalog-details
 
-What's New
--------------------------------------------------------------------------------
 
-- End of support for Openshift Container Platform 4.14 and 4.15, which are both now out of support (Since May 1 2025 and August 27 2025 respectively).
-- **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v9.0 and v9.1
-    - IBM Maximo Manage v9.0 and v9.1
 
+:::mas-catalog-whats-new
+
+:::mas-catalog-known-issues
 :::mas-catalog-install
 
-
 :::mas-catalog-source
-
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
@@ -25,13 +20,10 @@ IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Cont
 
 :::mas-catalog-ocp-compatibility-matrix
 
-
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **openshift-pipelines-operator-rh** required by the MAS CLI
-
-
 
 ### IBM Maximo Application Suite
 | Package        | Default Channel   | Channel       | Latest Version                                                            |
