--- a/docs/catalogs/v9-251231-ppc64le.md
+++ b/docs/catalogs/v9-251231-ppc64le.md
@@ -3,20 +3,14 @@ IBM Maximo Operator Catalog v9 (251231)
 
 :::mas-catalog-details
 
-What's New
--------------------------------------------------------------------------------
 
-- **MongoDb v8.0.17** support Running `mas update` will automatically upgrade existing MongoDbCommunity instances to MongoDb version v8.0.17 this requires MongoDb version to be on v7 or later.
-- **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v9.0 and v9.1
-    - IBM Maximo Manage v9.0 and v9.1
-    - IBM Suite License Service v3.12
 
+:::mas-catalog-whats-new
+
+:::mas-catalog-known-issues
 :::mas-catalog-install
 
-
 :::mas-catalog-source
-
 
 Red Hat OpenShift Container Platform Support
 -------------------------------------------------------------------------------
@@ -26,13 +20,10 @@ IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Cont
 
 :::mas-catalog-ocp-compatibility-matrix
 
-
 ### Red Hat Operators
 The following packages from the `registry.redhat.io/redhat/redhat-operator-index` catalog are used in the Maximo Application Suite install:
 
 - **openshift-pipelines-operator-rh** required by the MAS CLI
-
-
 
 ### IBM Maximo Application Suite
 | Package        | Default Channel   | Channel       | Latest Version                                                            |
