Add missing Package Manifest H2 element

--- a/docs/catalogs/v9-250403-s390x.md
+++ b/docs/catalogs/v9-250403-s390x.md
@@ -48,6 +48,9 @@ The following packages from the `registry.redhat.io/redhat/redhat-operator-index
 - **local-storage-operator**  required by `ibm.mas_devops.ocs` role
 - **odf-operator**  required by `ibm.mas_devops.ocs` role
 
+Package Manifest
+-------------------------------------------------------------------------------
+
 ### IBM Maximo Application Suite
 | Package        | Default Channel   | Channel       | Latest Version                                                            |
 |----------------|-------------------|---------------|---------------------------------------------------------------------------|
