--- a/docs/catalogs/v9-250925-amd64.md
+++ b/docs/catalogs/v9-250925-amd64.md
@@ -55,6 +55,9 @@ By default an in-cluster MongoDb (CE) instance will be created when you install 
 
 [Amazon DocumentDB](https://aws.amazon.com/documentdb/) provides [MongoDb compatability](https://docs.aws.amazon.com/documentdb/latest/developerguide/compatibility.html) and may be used as an alternative to MongoDb.  This catalog is certified compatible with **DocumentDb Engine Version v5.0.0**.
 
+Package Manifest
+-------------------------------------------------------------------------------
+
 ### IBM Maximo Application Suite
 | Package                  | Default Channel   | Channel       | Latest Version                                                              |
 |--------------------------|-------------------|---------------|-----------------------------------------------------------------------------|
