--- a/docs/catalogs/v9-250925-ppc64le.md
+++ b/docs/catalogs/v9-250925-ppc64le.md
@@ -32,6 +32,9 @@ The following packages from the `registry.redhat.io/redhat/redhat-operator-index
 - **openshift-pipelines-operator-rh** required by the MAS CLI
 
 
+Package Manifest
+-------------------------------------------------------------------------------
+
 ### IBM Maximo Application Suite
 | Package        | Default Channel   | Channel       | Latest Version                                                              |
 |----------------|-------------------|---------------|-----------------------------------------------------------------------------|
