--- a/docs/catalogs/v8-220805-amd64.md
+++ b/docs/catalogs/v8-220805-amd64.md
@@ -46,7 +46,7 @@ IBM Maximo Application Suite will run anywhere that you can run a supported Open
     - DB2, which is installed with ibm-db2u-operator, is supported on OpenShift Container Platform versions 4.6, 4.7, 4.8, and 4.9 only.
 
 
-Manifest
+Package Manifest
 -------------------------------------------------------------------------------
 
 ### IBM Maximo Application Suite
