[doc] added doc link for Software Product Compatibility Reports

--- a/docs/catalogs/v9-260129-amd64.md
+++ b/docs/catalogs/v9-260129-amd64.md
@@ -65,7 +65,7 @@ By default an in-cluster MongoDb (CE) instance will be created when you install 
 
 Software Product Compatibility Reports
 -------------------------------------------------------------------------------
-[Understand the complete set of compatibility requirements for an IBM Product](https://www.ibm.com/software/reports/compatibility/clarity/index.html).
+Please refer to the official compatibility reports by searching for “Maximo Application Suite” using [link](https://www.ibm.com/software/reports/compatibility/clarity/index.html). to review the complete list of compatibility requirements. Services that are not explicitly listed are not supported.
 
 Package Manifest
 -------------------------------------------------------------------------------
